# p11-kit

./: .dir-locals.el  .gitignore  .gitmodules  .packit.yaml  .travis.yml  CONTRIBUTING.md  COPYING  ChangeLog  HACKING  Makefile.am  NEWS  README.md  SECURITY.md  autogen.sh  automaint.sh  configure.ac  gtk-doc.make  meson.build  meson_options.txt  meson_post_install_test.sh
bash-completion/: meson.build  p11-kit  trust
common/: Makefile.am  argv.c  argv.h  array.c  array.h  asn1.c  asn1.h  attrs.c  attrs.h  base64.c  base64.h  basic.asn.h  buffer.c  buffer.h  checksum.c  checksum.h  compat.c  compat.h  constants.c  constants.h  debug.c  debug.h  dict.c  dict.h  frob-getauxval.c  frob-getenv.c  frob-getprogname.c  hash.c  hash.h  hex.c  hex.h  init.h  lexer.c  lexer.h  library.c  library.h  meson.build  message.c  message.h  mock.c  (+52 more)
common/tests/: Makefile.am  frob-cert.c  frob-getauxval.c  frob-ku.c  test-array.c  test-asn1.c  test-attrs.c  test-base64.c  test-buffer.c  test-checksum.c  test-compat.c  test-constants.c  test-dict.c  test-hash.c  test-lexer.c  test-message.c  test-oid.c  test-path.c  test-pem.c  test-tests.c  test-url.c  test-utf8.c  test-x509.c
doc/: Makefile.am  p11-kit-config.xml  p11-kit-devel.xml  p11-kit-docs.sgml  p11-kit-notes.xml  p11-kit-sections.txt  p11-kit-trust.xml  p11-kit.xml  pkcs11.conf.xml  style.css
doc/internal/: persist-format.txt
doc/manual/: Makefile.am  annotation-glossary.xml  docbook-params.xsl  meson.build  p11-kit-config.xml  p11-kit-devel.xml  p11-kit-docs.xml  p11-kit-proxy.xml  p11-kit-remote-proxy.xml  p11-kit-remoting.xml  p11-kit-sections.txt  p11-kit-sharing.xml  p11-kit-trust.xml  p11-kit.xml  pkcs11.conf.xml  sysdir.xml.in  trust.xml  userdir.xml.in
fuzz/: Makefile.am  conf_fuzzer.c  fuzz.h  meson.build  persist_fuzzer.c  rpc_fuzzer.c  run-afl.sh  uri_fuzzer.c
fuzz/conf.in/: basic.conf  multiline_src.conf  pem_block.conf  section.conf
fuzz/persist.in/: asn1_memleak.p11-kit  attrs_build_memleak1.p11-kit  attrs_build_memleak2.p11-kit  attrs_build_memleak3.p11-kit  attrs_build_memleak4.pem  attrs_merge_memleak.p11-kit  attrs_take_memleak.p11-kit  cacert3-trusted-alias.pem  cacert3-trusted.pem  distrusted.pem  lexer_next_buffer_overflow.p11-kit  multiple.pem  numerical_invalid_type.p11-kit  self-signed-with-eku.der  single-quote-value.p11-kit  testing-server.der  verisign-v1.pem
fuzz/rpc.in/: C_CloseAllSessions_slot_one  C_CloseSession  C_CopyObject_byte_array  C_CopyObject_mechanism_type_array  C_CreateObject_attribute_array  C_CreateObject_date  C_Decrypt  C_DecryptFinal  C_DecryptUpdate  C_DeriveKey  C_DestroyObject  C_DigestKey  C_DigestUpdate  C_EncryptFinal  C_EncryptInit  C_EncryptUpdate  C_FindObjectsFinal  C_FindObjectsInit_byte_array  C_FindObjectsInit_date_empty  C_FindObjectsInit_ulong  C_GenerateKey_attribute_array  C_GenerateKey_byte_array  C_GenerateKey_date  C_GenerateKey_date_empty  C_GenerateKey_invalid  C_GenerateRandom  C_GetAttributeValue  C_GetInfo  C_GetMechanismInfo_slot_one_capitalize  C_GetMechanismList  C_GetMechanismList_slot_one_length  C_GetOperationState  C_GetSlotList_all_buffer  C_GetSlotList_token_present_buffer  C_InitToken_slot_one  C_Login  C_Logout  C_OpenSession_slot_one  C_OpenSession_slot_two  C_SeedRandom  (+14 more)
fuzz/uri.in/: id_cert.uri  library.uri  object_private.uri  percent.uri  pin_source.uri  pin_value.uri  secret_key.uri  serial.uri  slot.uri  timeout.uri  token.uri  uri_parse_int_overflow.uri  vendor.uri
module/: Makefile.am  conf.c  conf.h  hash.c  hash.h  p11-kit-lib.c  p11-kit-messages.c  p11-kit-private.h  p11-kit-proxy.c  p11-kit-uri.c  p11-kit-uri.h  p11-kit.c  p11-kit.h  p11-unity.c  p11-unity.h  util.c
p11-kit/: Makefile.am  add-profile.c  client-init.c  client.c  client.h  compat.c  compat.h  conf.c  conf.h  debug.c  debug.h  delete-object.c  delete-profile.c  docs.h  export-object.c  filter.c  filter.h  frob-setuid.c  gen-fixed-closures.py  gen-pkcs11-gnu.sh  gen-virtual-fixed.sh  gen-virtual.py  gen-wrapper.py  gen-wrappers.py  generate-keypair.c  hash.c  hash.h  hashmap.c  hashmap.h  import-object.c  iter.c  iter.h  libp11-kit-0.dll.def  libp11-kit.map  list-mechanisms.c  list-objects.c  list-profiles.c  list-tokens.c  list.c  lists.c  (+116 more)
p11-kit/fixtures/: test-pinfile-large  test-system-allow-tokens.conf  test-system-deny-tokens.conf  test-system-none.conf
p11-kit/templates/: base-wrappers.py  binding-wrappers.py  fixed-wrappers.py  proxy-excludes.list  proxy-wrappers.py  stack-wrappers.py  virtual-excludes.list
p11-kit/tests/: Makefile.am  conf-test.c  frob-server.c  frob-setuid.c  mock-module-ep.c  mock-module-ep2.c  mock-module.c  mock-module.h  pin-test.c  progname-test.c  test-conf.c  test-deprecated.c  test-init.c  test-iter.c  test-log.c  test-managed.c  test-mock.c  test-modules.c  test-pin.c  test-proxy.c  test-rpc.c  test-transport.c  test-uri.c  test-util.c  test-virtual.c  uri-test.c
tests/: Makefile.am  conf-test.c  hash-test.c  mock-module-ep.c  mock-module.c  mock-module.h  pin-test.c  print-messages.c  progname-test.c  ptr-array-test.c  test-init.c  test-modules.c  test-recursive.c  uri-test.c
tests/files/: test-1.conf
tools/: Makefile.am  compat.c  extract-info.c  extract-jks.c  extract-openssl.c  extract-pem.c  extract-x509.c  extract.c  extract.h  list.c  p11-kit-extract-trust.in  p11-kit.c  save.c  save.h  tool.c  tool.h  utf8.c
tools/tests/: Makefile.am  test-extract.c  test-openssl.c  test-pem.c  test-save.c  test-tools.c  test-tools.h  test-utf8.c  test-x509.c  test.c  test.h
trust/: Makefile.am  adapter.c  adapter.h  anchor.c  anchor.h  asn1.c  asn1.h  base64.c  basic.asn  basic.asn.h  builder.c  builder.h  check-format.c  check-format.h  digest.c  digest.h  dump.c  dump.h  enumerate.c  enumerate.h  extract-cer.c  extract-edk2.c  extract-info.c  extract-jks.c  extract-openssl.c  extract-pem.c  extract.c  extract.h  frob-bc.c  frob-cert.c  frob-eku.c  frob-ext.c  frob-ku.c  frob-multi-init.c  frob-nss-trust.c  frob-oid.c  frob-token.c  index.c  index.h  list.c  (+50 more)
zsh-completion/: meson.build  p11-kit.zsh  trust.zsh
(+192 files in other folders)
